image-swap/kustomize/overlays/prod/patches/policy-mode-enforce.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: all-policies
  annotations:
    policies.kyverno.io/mode: enforce
spec:
  validationFailureAction: enforce
