image-swap/kustomize/overlays/prod/patches/spot-affinity-settings.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-ns-deployment-spotaffinity-policy
spec:
  rules:
  - name: insert-pod-antiaffinity
    match:
      any:
      - resources:
          kinds:
          - Deployment
    mutate:
      patchStrategicMerge:
        spec:
          template:
            spec:
              affinity:
                nodeAffinity:
                  requiredDuringSchedulingIgnoredDuringExecution:
                    nodeSelectorTerms:
                    - matchExpressions:
                      - key: "node.kubernetes.io/instance-type"
                        operator: In
                        values:
                        - "m5.xlarge"
                        - "m5.2xlarge"
                        - "r5.xlarge"
